--- a/style.css
+++ b/style.css
@@ -76,6 +76,12 @@ html {
     background-color: #55b0b7;
 }
 
+#coolify:active {
+    /* background-color: #3e8e41;
+    box-shadow: 0 5px #666; */
+    transform: translateY(4px);
+  }
+
 #coolname {
     font-size: 35px;
     font-weight: 700;
