--- a/dark.css
+++ b/dark.css
@@ -27,11 +27,11 @@
   }
 
 html {
-    background-color: #F4F7FB;
+    background-color: #346eb0;
     font-family: Gayathri, sans-serif;
     font-weight: 100;
     font-style: normal;
-    color: #346eb0;
+    color: #F4F7FB;
     font-size: 30px;
     
 }
@@ -44,7 +44,7 @@ html {
     width: 10em;
     height: 1.5em;
     /* padding: 0.5em, 0.3em, 0.5em, 0.3em; */
-    border: 2px solid #346eb0;
+    border: 2px solid #a4c5ea;
     border-radius: 4px;
     font-family: "Gayathri", sans-serif;
     color: #346eb0;
@@ -58,8 +58,8 @@ html {
 }
 
 #coolify {
-    background-color: #2B8B91;
-    color:#F4F7FB;
+    background-color: #F4F7FB;
+    color:#2B8B91;
     font-size: 30px;
     width: 8em;
     height: 2em;
@@ -73,7 +73,7 @@ html {
 }
 
 #coolify:hover {
-    background-color: #55b0b7;
+    background-color: #a4c5ea;
 }
 
 #coolify:active {
@@ -86,8 +86,8 @@ html {
 }
 
 #toggle {
-    background-color: #2B8B91;
-    color:#F4F7FB;
+    background-color: #F4F7FB;
+    color:#2B8B91;
     font-size: 17px;
     width: 4em;
     height: 1.5em;
@@ -100,7 +100,7 @@ html {
 }
 
 #toggle:hover {
-    background-color: #55b0b7;
+    background-color: #a4c5ea;
 }
 
 #toggle:active {
